--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
   font-size: 14px;
 }
 
-h1 {
-  font-size: 36px;
+h2 {
+  font-size: 32px;
 }
 
 .main {
@@ -76,9 +76,7 @@ footer {
   width: 60%;
 }
 
-.logo {
-  height: 50px;
-}
+.logo,
 .github {
   height: 50px;
 }
